[gd_scene load_steps=5 format=3 uid="uid://5oykuotl3kpk"]

[ext_resource type="Script" path="res://root.gd" id="1_x6cq7"]
[ext_resource type="PackedScene" uid="uid://bnh8vx2dljlmi" path="res://maps/main_map.tscn" id="2_d6kxc"]
[ext_resource type="PackedScene" uid="uid://b23yea8sjngrm" path="res://characters/player.tscn" id="2_i7n5y"]
[ext_resource type="PackedScene" uid="uid://d3vimjlvrs7ge" path="res://user_interface_elements.tscn" id="4_yftmf"]

[node name="root" type="Node2D"]
script = ExtResource("1_x6cq7")

[node name="MainMap" parent="." instance=ExtResource("2_d6kxc")]

[node name="Player" parent="." instance=ExtResource("2_i7n5y")]

[node name="MainCam" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="UserInterfaceElements" parent="." instance=ExtResource("4_yftmf")]
